--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,19 @@
+output_dir: "checkpoint_new"
+seed: 12345
+evaluation_strategy: "steps"
+eval_steps: 100
+logging_strategy: "steps"
+logging_steps: 100
+save_strategy: "steps"
+save_steps: 100
+save_total_limit: 3
+metric_for_best_model: "wups"
+per_device_train_batch_size: 32
+per_device_eval_batch_size: 32
+remove_unused_columns: False 
+num_train_epochs: 5
+fp16: True
+dataloader_num_workers: 8
 load_best_model_at_end: True
 path_images: "ADD_PATH_IMAGES"
 train_dataset: "ADD_TRAIN_DATA"
